[package]
name = "reclaim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
walkdir = "2"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
humansize = "2"
colored = "2"
dialoguer = "=0.11.0"
anyhow = "1"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tempfile = "=3.10.1"
zeroize = "=1.7.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
